--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">CoolWeather</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">简约天气</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_weather">CoolWeather</string>
 </resources>
